Remove GC logging parameters from default (#109)
* Remove GC logging parameters from default

* Make gc logging dependent on java version

* Load all *.vmoptions from config directory

* Review update